--- a/root-files/stylesheet.css
+++ b/root-files/stylesheet.css
@@ -9,7 +9,8 @@
 /* § Universal */
 
 body {
-    font-family: serif;
+    font-family: FreeSerif, Times, "Times New Roman", serif;
+    line-height: 1.2;
     max-width: 60em;
     margin: auto;
     display: grid;
@@ -19,7 +20,6 @@ body {
         "content"
         "navigation"
         "footer";
-    justify-items: center;
 }
 
 header {
@@ -97,7 +97,6 @@ hr:after {
 
 /* Paragraphs */
 p, dd {
-    text-align: justify;
     line-height: 1.5;
     margin-right: 1em;
 }
@@ -121,8 +120,6 @@ code {
     border-radius: 4px;
 }
 code {
-    font-size: 125%;
-    line-height: 150%;
     padding: 0.1em;
 }
 pre {
@@ -320,6 +317,7 @@ h1.title {
 
 .subtitle {
     font-size: 1.25em;
+    text-wrap: balance;
     text-align: center;
     margin: 0 0.25em 0.25em 0.25em;
     font-style: italic;
@@ -364,8 +362,17 @@ img.rfloat {
     }
 }
 
+@media (min-width: 30em) {
+    p, dd {
+        text-align: justify;
+    }
+}
+
 /* 'Wide' Screen Mode */
 @media (min-width: 40em) {
+    body {
+        font-size: 110%;
+    }
     pre {
         margin-left: 2em;
         margin-right: 1em;
@@ -382,6 +389,7 @@ img.rfloat {
                 "navigation content"
                 "navigation footer";
             grid-template-columns: auto 1fr;
+            justify-items: center;
         }
         nav:has(> #navigation) {
             display: block;
