--- a/root-files/stylesheet.css
+++ b/root-files/stylesheet.css
@@ -89,12 +89,14 @@ hr:after {
 .index-spread {
     display: flex;
     flex-flow: row wrap;
-    flex: 2;
-    column-gap: 1em;
+}
+
+.index-spread > .outline-3 {
+    margin-right: 1em;
 }
 
 .index-spread > :is(h1, h2, h3, h4, h5, h6) {
-    flex: 1 0 100%;
+    flex: 1 0 80%;
 }
 
 /* § Text */
