--- a/root-files/stylesheet.css
+++ b/root-files/stylesheet.css
@@ -336,11 +336,8 @@ nav:has(> #navigation) {
     margin: 0;
     padding: 0.5em;
 }
-#navigation li {
-    display: inline-block;
-}
 #navigation a {
-    display: block;
+    display: inline-block;
 }
 #navigation img {
     max-height: 14px;
@@ -396,7 +393,7 @@ img.rfloat {
             display: block;
             justify-self: end;
         }
-        #navigation li {
+        #navigation a {
             display: block;
         }
         #navigation {
